Microservices/3_UnderStandingKubernetes/PracticeData/nanaExplanation/4_Ingress_Explanation/infra/k8s/mongoExpress-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-express-depl
  labels:
    app: mongodb-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-express
  template:
    metadata:
      labels:
        app: mongodb-express
    spec:
      containers:
        - name: mongodb-express
          image: mongo-express
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-express-srv

spec:
  selector:
    app: mongodb-express
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
