Microservices/3_UnderStandingKubernetes/PracticeData/nanaExplanation/4_Ingress_Explanation/infra/k8s/ingress_nginx_example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongodb-express-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: mongoexpress.com
    http:
      paths:
      - path: /
        pathType: Exact  
        backend:
          service:
            name: mongodb-express-srv
            port: 
              number: 8081
